Fix html template

--- a/web/index.html.j2
+++ b/web/index.html.j2
@@ -146,6 +146,7 @@
                 {% endfor %}
             </section>
 
+            {% if patents %}
             <section class="section" aria-labelledby="patents-title">
                 <h2 id="patents-title" class="section__title">Patents</h2>
                 <ul class="highlights-list">
@@ -156,7 +157,7 @@
                     {% endfor %}
                 </ul>
             </section>
-
+            {% endif %}
         </main>
     </div>
 
